tests/parser/bad/return_empty.hel
// @name return_empty
// @phase parser
// @expect error

f = () : i32 { return; }
